--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <h2 style="display :inline">spider-nam</h2>
 <input type="radio" name="superhero" value="spider-man">
 <h2 style="display :inline">batman</h2>
-<input type="radio">
+<input type="radio" name="superhero" value="batman">
 <h2 style="display :inline">iron-man</h2>
-<input type="radio"><br/>
+<input type="radio"  name="superhero" value="iron-man"><br/>
 <input type="submit">
 </form>
 <h1>Booking form</h1>
