--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <h2 style="display:inline"> popcorns</h2>
     <input type="checkbox" name="addon" value="popcorns">
     <h2 style="display:inline"> beverages</h2>
-    <input type="checkbox" name="addon" value="beverages">>
+    <input type="checkbox" name="addon" value="beverages">
     <h2 style="display:inline"> chips</h2>
-    <input type="checkbox"><br/>
+    <input type="checkbox" name="addon" value="chips"><br/>
     <input type="submit">
 </form>
 <h1>upload selfie</h1>
